# mcp

./: .aws-amazon-mcp.json  README.md  mkdocs.yml  sitemap.xml
.github/: CODEOWNERS
.mcp/: mcp_config.json
docs/: index.md
docs/servers/: aws-wa-sec-tool-mcp-server.md
src/aws-wa-reliability-mcp-server/: .gitignore  PROMPT_TEMPLATE.md  README.md  cline_mcp-config.json  pyproject.toml
src/aws-wa-reliability-mcp-server/awslabs/aws_reliability_pillar_mcp_server/: __init__.py  consts.py  main.py  server.py
src/aws-wa-reliability-mcp-server/awslabs/aws_reliability_pillar_mcp_server/integrations/: reliability_services.py
src/aws-wa-reliability-mcp-server/awslabs/aws_reliability_pillar_mcp_server/util/: reliability_services.py  resource_utils.py
src/aws-wa-sec-tool-mcp-server/: README.md  pyproject.toml
src/aws-wa-sec-tool-mcp-server/awslabs/aws_wa_sec_tool_mcp_server/: server.py
src/aws-wa-sec-tool-mcp-server/awslabs/aws_wa_sec_tool_mcp_server/util/: network_security.py  security_services.py  storage_security.py
src/aws-wa-sec-tool-mcp-server/tests/: __init__.py  conftest.py  test_access_analyzer_fix.py  test_network_security.py  test_network_security_additional.py  test_prompt_utils.py  test_resource_utils.py  test_resource_utils_fix.py  test_security_services.py  test_security_services_additional.py  test_server.py  test_server_additional.py  test_server_coverage.py  test_server_prompts.py  test_server_security_findings.py  test_storage_security.py
src/aws-wa-security-mcp-server/: .gitignore  LICENSE  PROMPT_TEMPLATE.md  README.md  aws_amazonq_mcp-config.json  cline_mcp-config.json  deploy.sh  ec2-limited-policy-explanation.md  ec2-limited-policy.json  ec2-role-remediation-steps.md  pyproject.toml  requirements.txt  server.py
src/aws-wa-security-mcp-server/awslabs/: __init__.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/: __init__.py  consts.py  models.py  server.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/core/: dynamic_scanner.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/integrations/: gap_analyzer.py  security_services.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/knowledge/: security_patterns.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/remediation/: remediation_generator.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/reporting/: report_generator.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/rules/: rule_catalog.py  rule_generator.py
src/aws-wa-security-mcp-server/awslabs/aws_security_pillar_mcp_server/util/: __init__.py  resource_utils.py  security_services.py
src/aws-wa-security-mcp-server/awslabs/aws_wa_sec_review_mcp_server/: __init__.py  consts.py  server.py
src/aws-wa-security-mcp-server/awslabs/aws_wa_sec_review_mcp_server/util/: __init__.py  network_security.py  prompt_utils.py  resource_utils.py  security_services.py  storage_security.py
src/aws-wa-security-mcp-server/util/: __init__.py
