[project]
name = "aws-wa-reliability-mcp-server"
version = "0.1.0"
description = "AWS Well-Architected Reliability Pillar MCP Server"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Amazon Web Services", email = "aws@amazon.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "boto3>=1.28.0",
    "mcp[server]>=1.7.1",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/aws-samples/aws-wa-reliability-mcp-server"
"Bug Tracker" = "https://github.com/aws-samples/aws-wa-reliability-mcp-server/issues"

[tool.setuptools]
packages = {find = {where = ["."]}}

[project.entry-points.mcp]
aws-reliability-pillar-mcp-server = "awslabs.aws_reliability_pillar_mcp_server.server:mcp"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
