[project]
name = "aws-wa-sec-review-mcp-server"
version = "0.1.0"
description = "AWS Well-Architected Security Review MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[server]>=1.7.1",
    "boto3>=1.28.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.setuptools]
packages = {find = {where = ["."]}}

[project.entry-points.mcp]
aws-wa-sec-review-mcp-server = "server:mcp"
